[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["takanassyi <takanassyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
